--- a/APP-UI/src/app/components/home/home.component.html
+++ b/APP-UI/src/app/components/home/home.component.html
@@ -2,6 +2,10 @@
     <div class="card-header">
       <h2 class="card-title">Event Revenue Overview</h2> 
     </div>
-      <canvas class="canvas"  id="canvas"></canvas>
+    <canvas class="pie" id="personCanvas"></canvas> <!-- Ensure this is present --> 
+    
+    <canvas class="pie" id="totalCostCanvas"> </canvas> <!-- Ensure this is present --> 
+
+    <canvas class="canvas"  id="canvas"></canvas>
   </div>
     
