--- a/APP-UI/src/app/components/home/home.component.css
+++ b/APP-UI/src/app/components/home/home.component.css
@@ -32,9 +32,60 @@
 }
 .pie {
   padding: 20px;
-  height: 300px !important;
-  width: 300px !important;
+  /* height: 300px !important;
+  width: 300px !important; */
   border-radius: 10px;
   background-color: whitesmoke;
   margin: 20px
+}
+
+.dashboard-counts {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 0;
+}
+
+.count-card {
+  background-color: whitesmoke;
+  border-radius: 10px;
+  padding: 15px;
+  text-align: center;
+border-color: #2c3e50;
+  flex: 1;
+  margin: 10px 20px;
+}
+
+
+.count-card h3 {
+  margin: 0;
+  font-size: 1.5em;
+  color: #2c3e50;
+  padding: 10px;
+}
+
+.count-card p {
+  font-size: 2em;
+  font-weight: bold;
+  color: #34495e;
+}
+
+.chart-section {
+  margin: 30px 0; /* Space between chart sections */
+  padding: 20px; /* Padding around each section */
+  background-color: #f9f9f9; /* Light background for contrast */
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+}
+
+.chart-title {
+  font-size: 1.8em; /* Larger font size for titles */
+  font-weight: 600; /* Bold font weight */
+  color: #2c3e50; /* Dark color for titles */
+  margin-bottom: 10px; /* Space below the title */
+}
+
+.chart-description {
+  font-size: 1.1em; /* Slightly larger font size for descriptions */
+  color: #34495e; /* Darker color for descriptions */
+  margin-bottom: 20px; /* Space below the description */
 }
