--- a/APP-UI/src/app/components/home/home.component.html
+++ b/APP-UI/src/app/components/home/home.component.html
@@ -48,7 +48,12 @@
   <div class="chart-section">
     <h3 class="chart-title">Total Cost Distribution</h3>
     <p class="chart-description">This pie chart illustrates the distribution of total costs across different categories, providing insights into spending patterns.</p>
-    <canvas id="totalCostCanvas" ></canvas>
+    <div class="pie-container">
+    <canvas class="pie" id="totalCostCanvas" ></canvas>
+    <canvas class="pie" id="totalClaimCanvas" ></canvas></div>
+
   </div>
+  
+  
 </div>
     
